--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Página web provisional</title>
 </head>
 <body>
-    <h1>Bienvenidos a este blog</h1>
+    <div id="container">
+        <div id="post">
+            <h1>Bienvenidos a este blog acerca de GitHub</h1>
+        </div>
+            <p>En este post vamos a charlar acerca de todo lo que necesitas saber para utilizar de la mejor manera las ramas en GitHub</p>
+    </div>
+    
 </body>
 </html>
