estructura inicial de la cabecera

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <div id="container">
         <div id="post">
+            <div id="cabecera">Cabecera</div>
             <h1>Bienvenidos a este blog acerca de GitHub</h1>
-        </div>
             <p>En este post vamos a charlar acerca de todo lo que necesitas saber para utilizar de la mejor manera las ramas en GitHub</p>
     </div>
+    </div>  
     
 </body>
 </html>
