Finalizada la cabecera con diseño morado

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Hiperblog <span id="tagline">Tu blog de confianza</span>
+        </div>
         <div id="post">
-            <div id="cabecera">Cabecera</div>
             <h1>Bienvenidos a este blog acerca de GitHub</h1>
             <p>En este post vamos a charlar acerca de todo lo que necesitas saber para utilizar de la mejor manera las ramas en GitHub</p>
     </div>
