agregado el contenido final del blog y agregando una mejor tipografía UwU

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="container">
         <div id="post">
             <h1>Bienvenidos a este blog acerca de GitHub</h1>
-        </div>
             <p>En este post vamos a charlar acerca de todo lo que necesitas saber para utilizar de la mejor manera las ramas en GitHub</p>
+            <p>Mira que aquí me voy a poner a estudiar tantas barbaridades como pueda, la verdad es que esto va a terminar valiendo 5 kilogramos de verguisima aparde de que no mms wey, mi visual code, se va hasta el infinito cuando empiezo a escribir, es bastante molesto y lo voy a arreglar cuanto antes</p>
     </div>
-    
+    </div>
 </body>
 </html>
