--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="container">
+        
         <div id="cabecera">
+        <img src="Imagenes/logo.jpg" width="50px" >
             Hiperblog <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
