--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         </div>
         <div id="post">
             <h1>Bienvenidos a este blog acerca de GitHub</h1>
-            <p>En este post vamos a charlar acerca de todo lo que necesitas saber para utilizar de la mejor manera las ramas en GitHub</p>
+            <p>En este post vamos a charlar acerca de todo lo que necesitas saber para utilizar de la mejor manera las ramas en GitHub</p>}
+            <img src="Imagenes/Humberto.jpg"
             <p>Mira que aquí me voy a poner a estudiar tantas barbaridades como pueda, la verdad es que esto va a terminar valiendo 5 kilogramos de verguísima, aparte de que no mames wey, mi visual code, ya no se va hasta el infinito, ya lo arreglé.</p>
     </div>
     <div id="footer">Este es el footer Prueba 1</div>
